fix-spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1133,8 +1133,8 @@ ol {
 
 @media (max-width: 767px) {
   .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 }
 
@@ -1204,7 +1204,7 @@ ol {
 @media (max-width: 767px) {
   .section-title {
     padding: 0px 10px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
   }
   .section-title h3 {
     font-size: 14px;
